# node_to_FAST_API_one

./: fastapi-migration-prompt.md  test_endpoint.py
client/: package.json
client/public/: index.html
client/src/: App.js  store.js
node_backend/: .env  .gitignore  index.js  package.json
node_backend/controller/: addressController.js  cartController.js  homeController.js  restaurantController.js  userController.js
node_backend/dataInsertion/: allRestaurants.js  bestOffersProduct.js  filterCuisinesProduct.js  singleRestaurant.js  topRestaurantsProduct.js
node_backend/dummyData/: allRestaurantsTable.js  bestOffersTable.js  filterCuisinesTable.js  (+2 more)
python_backend/: .gitignore  main.py  pyproject.toml
python_backend/app/: __init__.py
python_backend/app/config/: database.py
python_backend/app/data_insertion/: all_restaurants.py  best_offers.py  seed_cuisines.py  seed_restaurant_details.py  seed_top_restaurants.py
python_backend/app/dummy_data/: allRestaurantsTable.json  bestOffersTable.json  filterCuisinesTable.json  restaurantDetailsTable.json  topRestaurantsTable.json
python_backend/app/models/: address.py  best_offers.py  cart.py  cuisines.py  home.py  restaurant.py  restaurant_details.py  top_restaurant.py  user.py
python_backend/app/models/home/: __init__.py  all_restaurants.py  cuisines.py  single_restaurant.py  top_restaurants.py
python_backend/app/routers/: address_router.py  cart_router.py  home_router.py  restaurant_router.py  user_router.py
python_backend/app/utils/: auth.py
python_backend/tests/: test_user_router.py
(+123 files in other folders)
